--- a/app/globals.css
+++ b/app/globals.css
@@ -49,7 +49,7 @@
     @apply flex flex-row items-center gap-1 max-xs:justify-center;
   }
 
-  .book-btn {
+  .book-btn-main {
     @apply bg-dark-600 mt-3 min-h-14 w-full font-bebas-neue text-base text-primary;
   }
 
